--- a/frontend/components/toast/toast.module.scss
+++ b/frontend/components/toast/toast.module.scss
@@ -10,13 +10,13 @@
     background-color: $info;
   }
   &.success {
-    background-color: #11af22;
+    background-color: #ffffff;
   }
   &.warning {
     background-color: $warning;
   }
   &.error {
-    background-color: #d80027;
+    background-color: #ffffff;
   }
 
   display: none;
